force-app/main/default/objects/User/User.object-meta.xml
<CustomObject>
	
</CustomObject>