force-app/main/default/objects/User/fields/Premise_Code__c.field-meta.xml
<CustomField>
    <fullName>Premise_Code__c</fullName>
    <description>Contains the Premise code used by a Telstra Store. This used to facilitate Role Hierarchy in Salesforce.</description>
    <inlineHelpText>Contains the Premise code used by a Telstra Store. This used to facilitate Role Hierarchy in Salesforce.</inlineHelpText>
    <label>Premise Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>