force-app/main/default/objects/User/fields/Primary_Premise_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Premise_Name__c</fullName>
    <label>Primary Premise Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>