force-app/main/default/objects/User/fields/Profiled_Content_User__c.field-meta.xml
<CustomField>
    <fullName>Profiled_Content_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Able to access profiled content (files) in Knowledge community</description>
    <inlineHelpText>Able to access profiled content (files) in Knowledge community</inlineHelpText>
    <label>Profiled Content User</label>
    <type>Checkbox</type>
</CustomField>